refactor agent form to use jsonmodel_form_builder and new helper

--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -16,7 +16,7 @@
 
 .control-group.active {
   border-radius: 4px;
-  background-color: #f3f9ff;
+  background-color: #fafcff;
 }
 
 .control-group .controls.label-only {
