--- a/frontend/app/views/agents/new.html.erb
+++ b/frontend/app/views/agents/new.html.erb
@@ -11,7 +11,7 @@
   </div>
   <div class="span9 record-pane">
     <h2><%= "New #{I18n.t("agent.#{@agent.agent_type}")}" %>  <span class="label label-info">Agent</span></h2>
-    <%= form_for @agent, :as => "agent", :url => {:action => :create, :type => @agent.agent_type}, :html => {:class => 'form-horizontal'} do |f| %>
+    <%= jsonmodel_form_for @agent, :as => "agent", :url => {:action => :create, :type => @agent.agent_type}, :html => {:class => 'form-horizontal'} do |f| %>
        <%= render :partial => "agents/form", :locals => {:f => f} %>
        <div class="form-actions">            
           <button type="submit" class="btn btn-primary">Save <%= I18n.t("agent.#{@agent.agent_type}") %></button>   
