WIP cherry pick in marktmp form helper refactorings

--- a/frontend/app/views/agents/name_forms/_agent_person.html.erb
+++ b/frontend/app/views/agents/name_forms/_agent_person.html.erb
@@ -1,18 +1,18 @@
 <div class="agent-name-fields">
-  <%= f.jsonmodel_label_and_field :authority_id %>
-  <%= f.jsonmodel_label_and_field :prefix %>
-  <%= f.jsonmodel_label_and_field :title %>
-  <%= f.jsonmodel_label_and_field :primary_name %>
-  <%= f.jsonmodel_label_and_field :rest_of_name %>
-  <%= f.jsonmodel_label_and_field :suffix %>
-  <%= f.jsonmodel_label_and_field :fuller_form %>
-  <%= f.jsonmodel_label_and_field :number %>
-  <%= f.jsonmodel_label_and_field :dates %>
+  <%= f.label_field_pair :authority_id %>
+  <%= f.label_field_pair :prefix %>
+  <%= f.label_field_pair :title %>
+  <%= f.label_field_pair :primary_name %>
+  <%= f.label_field_pair :rest_of_name %>
+  <%= f.label_field_pair :suffix %>
+  <%= f.label_field_pair :fuller_form %>
+  <%= f.label_field_pair :number %>
+  <%= f.label_field_pair :dates %>
   <hr/>
-  <%= f.jsonmodel_label_and_field :qualifier %>
-  <%= f.jsonmodel_label_and_field :sort_name %>
+  <%= f.label_field_pair :qualifier %>
+  <%= f.label_field_pair :sort_name %>
   <hr/>
-  <%= f.jsonmodel_label_and_field :description_type %>
-  <%= f.jsonmodel_label_and_field :description_note %>
-  <%= f.jsonmodel_label_and_field :description_citation %>
+  <%= f.label_field_pair :description_type %>
+  <%= f.label_field_pair :description_note %>
+  <%= f.label_field_pair :description_citation %>
 </div>
