--- a/frontend/app/views/agents/_form.html.erb
+++ b/frontend/app/views/agents/_form.html.erb
@@ -27,9 +27,10 @@
 
   <section id="primary_name">
     <h3>Primary Name</h3>
-    <%= f.fields_for "names", @agent.names[0] do | name_fields | %>
-      <%= render :partial => "agents/name_forms/#{@agent.agent_type}", :locals => {:f => name_fields} %>
+    <% f.with_jsonmodel("names[]", @agent.names[0], @name_type) do %>
+      <%= render :partial => "agents/name_forms/#{@agent.agent_type}", :locals => {:f => f} %>
     <% end %>
+
   </section>
 
   <section id="secondary_names">
@@ -41,8 +42,8 @@
       <% if @agent.names.length > 1 %>
         <% @agent.names.each_with_index do | name , index | %>
           <% if index > 0 %>
-            <%= f.fields_for "names", name, :child_index => "${index}" do | name_fields | %>
-              <%= render :partial => "agents/name_forms/secondary_name_form", :locals => {:f => name_fields, :agent_type => @agent.agent_type} %>
+            <% f.with_jsonmodel("names[]", name, @name_type) do %>
+              <%= render :partial => "agents/name_forms/#{@agent.agent_type}", :locals => {:f => f} %>
             <% end %>
           <% end %>
         <% end %>
@@ -60,8 +61,8 @@
     <div id="contacts_container">
       <% if @agent.agent_contacts && @agent.agent_contacts.length > 0 %>
         <% @agent.agent_contacts.each do | contact | %>
-          <%= f.fields_for "agent_contacts", contact do | contact_fields | %>
-            <%= render :partial => "agents/contact_details", :locals => {:f => contact_fields} %>
+          <% f.with_jsonmodel("agent_contacts[]", contact, :agent_contact) do %>
+            <%= render :partial => "agents/contact_details", :locals => {:f => f} %>
           <% end %>
         <% end %>
       <% else %>
@@ -78,13 +79,13 @@
 </fieldset>
 
 <div id="agent_contact_form_template"><!--
-  <%= f.fields_for "agent_contacts", JSONModel(:agent_contact).new._always_valid!, :child_index => "${index}" do | contact_fields | %>
-    <%= render :partial => "agents/contact_details", :locals => {:f => contact_fields} %>
+  <% f.with_jsonmodel("agent_contacts[]", {}, :agent_contact) do %>
+    <%= render :partial => "agents/contact_details", :locals => {:f => f} %>
   <% end %>
 --></div>
 
 <div id="agent_secondary_name_form_template"><!--
-  <%= f.fields_for "names", JSONModel(:name_person).new._always_valid!, :child_index => "${index}" do | name_fields | %>
-    <%= render :partial => "agents/name_forms/secondary_name_form", :locals => {:f => name_fields, :agent_type => @agent.agent_type} %>
+  <% f.with_jsonmodel("names[]", {}, @name_type) do %>
+    <%= render :partial => "agents/name_forms/secondary_name_form", :locals => {:f => f} %>
   <% end %>
 --></div>
