WIP don't use the jsonmodel_form_builder... use the rails one

--- a/frontend/app/views/agents/_contact_details.html.erb
+++ b/frontend/app/views/agents/_contact_details.html.erb
@@ -4,18 +4,18 @@
     <a href="javascript:void(0)" class="btn btn-mini pull-right subform-remove"><span class='icon-remove'></span></a>
   </h4>
   <div class="subform-container">
-    <%= f.jsonmodel_label_and_field :name %>
-    <%= f.jsonmodel_label_and_field :salutation %>
-    <%= f.jsonmodel_label_and_field :address_1 %>
-    <%= f.jsonmodel_label_and_field :address_2 %>
-    <%= f.jsonmodel_label_and_field :address_3 %>
-    <%= f.jsonmodel_label_and_field :city %>
-    <%= f.jsonmodel_label_and_field :region %>
-    <%= f.jsonmodel_label_and_field :country %>
-    <%= f.jsonmodel_label_and_field :post_code %>
-    <%= f.jsonmodel_label_and_field :telephone %>
-    <%= f.jsonmodel_label_and_field :telephone_ext %>
-    <%= f.jsonmodel_label_and_field :fax %>
-    <%= f.jsonmodel_label_and_field :email %>
+    <%= f.label_field_pair :name %>
+    <%= f.label_field_pair :salutation %>
+    <%= f.label_field_pair :address_1 %>
+    <%= f.label_field_pair :address_2 %>
+    <%= f.label_field_pair :address_3 %>
+    <%= f.label_field_pair :city %>
+    <%= f.label_field_pair :region %>
+    <%= f.label_field_pair :country %>
+    <%= f.label_field_pair :post_code %>
+    <%= f.label_field_pair :telephone %>
+    <%= f.label_field_pair :telephone_ext %>
+    <%= f.label_field_pair :fax %>
+    <%= f.label_field_pair :email %>
   </div>
 </div>
