--- a/frontend/app/views/shared/_header.html.erb
+++ b/frontend/app/views/shared/_header.html.erb
@@ -19,7 +19,8 @@
                 <li><%= link_to "Accessions", :controller => :accessions, :action => :index %></li>
                 <li><%= link_to "Resources", :controller => :resources, :action => :index %></li>
                 <li class="divider"></li>
-                <li><%= link_to "Subjects", :controller => :subjects, :action => :index %></li>                
+                <li><%= link_to "Subjects", :controller => :subjects, :action => :index %></li>
+                <li><%= link_to "Agents", :controller => :agents, :action => :index %></li>
               </ul>
             </li>
             <li class="dropdown create-container">
