fix selenium tests; refactor jsonmodel helper to create both text fields and text areas; add auto gen of sort name;

--- a/frontend/app/views/agents/_form.html.erb
+++ b/frontend/app/views/agents/_form.html.erb
@@ -89,3 +89,11 @@
     <%= render :partial => "agents/name_forms/secondary_name_form", :locals => {:f => f} %>
   <% end %>
 --></div>
+
+<div id="agent_name_person_sort_name_template"><!--
+${rest_of_name} ${primary_name}, ${prefix}, ${suffix}, ${title}, ${number} (${fuller_form}), ${dates}, (${qualifier})
+--></div>
+
+<div id="agent_name_person_sort_name_inverted_template"><!--
+${primary_name} ${rest_of_name}, ${prefix}, ${suffix}, ${title}, ${number} (${fuller_form}), ${dates}, (${qualifier})
+--></div>
