--- a/frontend/app/views/agents/index.html.erb
+++ b/frontend/app/views/agents/index.html.erb
@@ -7,7 +7,7 @@
       <div class="btn-group">
         
       </div>
-      <% if not @subjects.blank? %>
+      <% if not @agents.blank? %>
          <h2>Agents</h2>
          <table class="table table-striped table-bordered table-condensed">
            <thead>
@@ -19,10 +19,11 @@
            <tbody>
             <% @agents.each do |agent| %>
                <tr>
-                <td>></td>
+                <td><%= agent.names[0]["primary_name"] %></td>
                 <td>
                    <div class="btn-group" style="float: right">
-                     <%= link_to "View", {:controller => :agents, :action => :show, :id => agent.id}, :class => "btn btn-mini" %>
+                     <%= link_to "Edit", {:controller => :agents, :action => :edit, :id => agent.id, :type => agent.agent_type}, :class => "btn btn-mini" %>
+                     <%= link_to "View", {:controller => :agents, :action => :show, :id => agent.id, :type => agent.agent_type}, :class => "btn btn-mini" %>
                    </div>
                 </td>
               </tr>
