add form for family agent; add prefix to family name schema;

--- a/frontend/app/views/shared/_header.html.erb
+++ b/frontend/app/views/shared/_header.html.erb
@@ -34,6 +34,7 @@
                   <a href="javascript:void(0);">Agent</a>
                   <ul class="dropdown-menu">
                     <li><%= link_to "Person", :controller => :agents, :action => :new, :type => :agent_person %></li>
+                    <li><%= link_to "Family", :controller => :agents, :action => :new, :type => :agent_family %></li>
                   </ul>
                 </li>
               </ul>
