--- a/frontend/app/views/agents/_form.html.erb
+++ b/frontend/app/views/agents/_form.html.erb
@@ -78,10 +78,34 @@
   <% end %>
 --></div>
 
-<div id="agent_name_person_sort_name_template"><!--
-${rest_of_name} ${primary_name}, ${prefix}, ${suffix}, ${title}, ${number} (${fuller_form}), ${dates}, (${qualifier})
+<div id="agent_person_sort_name_template"><!--
+{if defined('rest_of_name') && rest_of_name.length > 0}${rest_of_name}{/if}
+{if defined('primary_name') && primary_name.length > 0} ${primary_name}{/if}
+{if defined('prefix') && prefix.length > 0}, ${prefix}{/if}
+{if defined('suffix') && suffix.length > 0}, ${suffix}{/if}
+{if defined('title') && title.length > 0}, ${title}{/if}
+{if defined('number') && number.length > 0}, ${number}{/if}
+{if defined('fuller_form') && fuller_form.length > 0} (${fuller_form}){/if}
+{if defined('dates') && dates.length > 0}, ${dates}{/if}
+{if defined('qualifier') && qualifier.length > 0}, (${qualifier}){/if}
 --></div>
 
-<div id="agent_name_person_sort_name_inverted_template"><!--
-${primary_name} ${rest_of_name}, ${prefix}, ${suffix}, ${title}, ${number} (${fuller_form}), ${dates}, (${qualifier})
+<div id="agent_person_sort_name_inverted_template"><!--
+{if defined('primary_name') && primary_name.length > 0}${primary_name}{/if}
+{if defined('rest_of_name') && rest_of_name.length > 0} ${rest_of_name}{/if}
+{if defined('prefix') && prefix.length > 0}, ${prefix}{/if}
+{if defined('suffix') && suffix.length > 0}, ${suffix}{/if}
+{if defined('title') && title.length > 0}, ${title}{/if}
+{if defined('number') && number.length > 0}, ${number}{/if}
+{if defined('fuller_form') && fuller_form.length > 0} (${fuller_form}){/if}
+{if defined('dates') && dates.length > 0}, ${dates}{/if}
+{if defined('qualifier') && qualifier.length > 0}, (${qualifier}){/if}
+--></div>
+
+<div id="agent_family_sort_name_template"><!--
+${family_name}, ${prefix}, ${dates} (${qualifier})
+{if defined('family_name') && family_name.length > 0}${family_name}{/if}
+{if defined('prefix') && prefix.length > 0}, ${prefix}{/if}
+{if defined('dates') && dates.length > 0}, ${dates}{/if}
+{if defined('qualifier') && qualifier.length > 0}, (${qualifier}){/if}
 --></div>
