WIP add direct_order to name_person and tweak select on formhelper

--- a/frontend/app/views/agents/name_forms/_agent_person.html.erb
+++ b/frontend/app/views/agents/name_forms/_agent_person.html.erb
@@ -1,5 +1,6 @@
 <div class="agent-name-fields">
   <%= f.label_field_pair :authority_id %>
+  <%= f.label_field_pair :direct_order %>
   <%= f.label_field_pair :prefix %>
   <%= f.label_field_pair :title %>
   <%= f.label_field_pair :primary_name %>
