--- a/frontend/app/views/agents/index.html.erb
+++ b/frontend/app/views/agents/index.html.erb
@@ -12,14 +12,16 @@
          <table class="table table-striped table-bordered table-condensed">
            <thead>
              <tr>
-               <th>Subject</th>
+               <th>Sort Name</th>
+               <th>Type</th>
                <th width="70px"><!-- actions --></th>
              </tr>
            </thead>
            <tbody>
             <% @agents.each do |agent| %>
                <tr>
-                <td><%= agent.names[0]["primary_name"] %></td>
+                <td><%= agent.names[0]["sort_name"] %></td>
+                <td><%= I18n.t("agent.agent_type.#{agent.agent_type}") %></td>
                 <td>
                    <div class="btn-group" style="float: right">
                      <%= link_to "Edit", {:controller => :agents, :action => :edit, :id => agent.id, :type => agent.agent_type}, :class => "btn btn-mini" %>
