--- a/frontend/app/views/agents/_form.html.erb
+++ b/frontend/app/views/agents/_form.html.erb
@@ -78,9 +78,9 @@
   <% end %>
 --></div>
 
-<div id="agent_person_sort_name_template"><!--
-{if defined('rest_of_name') && rest_of_name.length > 0}${rest_of_name}{/if}
-{if defined('primary_name') && primary_name.length > 0} ${primary_name}{/if}
+<div id="agent_person_sort_name_standard_template"><!--
+{if defined('primary_name') && primary_name.length > 0}${primary_name}{/if}
+{if defined('rest_of_name') && rest_of_name.length > 0}, ${rest_of_name}{/if}
 {if defined('prefix') && prefix.length > 0}, ${prefix}{/if}
 {if defined('suffix') && suffix.length > 0}, ${suffix}{/if}
 {if defined('title') && title.length > 0}, ${title}{/if}
@@ -91,8 +91,8 @@
 --></div>
 
 <div id="agent_person_sort_name_inverted_template"><!--
-{if defined('primary_name') && primary_name.length > 0}${primary_name}{/if}
-{if defined('rest_of_name') && rest_of_name.length > 0} ${rest_of_name}{/if}
+{if defined('rest_of_name') && rest_of_name.length > 0}${rest_of_name}{/if}
+{if defined('primary_name') && primary_name.length > 0} ${primary_name}{/if}
 {if defined('prefix') && prefix.length > 0}, ${prefix}{/if}
 {if defined('suffix') && suffix.length > 0}, ${suffix}{/if}
 {if defined('title') && title.length > 0}, ${title}{/if}
