--- a/frontend/app/views/agents/edit.html.erb
+++ b/frontend/app/views/agents/edit.html.erb
@@ -11,7 +11,7 @@
   </div>
   <div class="span9 record-pane">
     <h2><%= @agent.names[0]["primary_name"] %>  <span class="label label-info">Agent</span></h2>
-    <%= form_for @agent, :as => "agent", :url => {:action => :update, :type => @agent.agent_type}, :html => {:class => 'form-horizontal'} do |f| %>
+    <%= form_for @agent, :as => "agent", :url => {:action => :update, :id => @agent.id, :type => @agent.agent_type}, :html => {:class => 'form-horizontal'} do |f| %>
        <%= render :partial => "agents/form", :locals => {:f => f} %>
        <div class="form-actions">            
           <button type="submit" class="btn btn-primary">Save <%= I18n.t("agent.#{@agent.agent_type}") %></button>   
