--- a/frontend/app/assets/stylesheets/archivesspace/common.less
+++ b/frontend/app/assets/stylesheets/archivesspace/common.less
@@ -111,3 +111,20 @@ h2 > .label {
 .dropdown-submenu a:focus .dropdown-menu {
   display: block;
 }
+
+.nav-list .form-actions {
+  margin: 0;
+  padding: 10px !important;
+  border: 1px solid #E5E5E5;
+  border-radius: 0 0 4px 4px;
+
+  .btn-primary {
+    width: 100%;
+  }
+
+  .btn-cancel {
+    width: auto;
+    float: right;
+    padding: 4px 14px;
+  }
+}
