--- a/frontend/app/views/agents/new.html.erb
+++ b/frontend/app/views/agents/new.html.erb
@@ -1,22 +1,17 @@
 <%= render :partial => "shared/breadcrumb", :locals => {:trail => [link_to("Browse Agents", :controller => :agents, :action => :index),"New #{I18n.t("agent.#{@agent.agent_type}")}"]} %>
-<div class="row-fluid">
-  <div class="span3" id="archivesSpaceSidebar">
-    <ul class="nav nav-list affix as-nav-list" data-spy="affix">
-      <li><a href="#agent_details">Agent Details <span class="icon-chevron-right"></span></a></li>
-      <li><a href="#primary_name">Primary Name <span class="icon-chevron-right"></span></a></li>
-      <li><a href="#secondary_names">Secondary Name(s) <span class="icon-chevron-right"></span></a></li>
-      <li><a href="#contacts">Contact Details <span class="icon-chevron-right"></span></a></li>
-      <li><a href="#relationships">Relationships <span class="icon-chevron-right"></span></a></li>
-    </ul>
+
+<%= form_for @agent, :as => "agent", :url => {:action => :create, :type => @agent.agent_type}, :html => {:class => 'form-horizontal'} do |f| %>
+  <div class="row-fluid">
+    <div class="span3">
+      <%= render :partial => "agents/sidebar" %>
+    </div>
+    <div class="span9 record-pane">
+      <h2><%= "New #{I18n.t("agent.#{@agent.agent_type}")}" %>  <span class="label label-info">Agent</span></h2>    
+      <%= render :partial => "agents/form", :locals => {:f => f} %>
+      <div class="form-actions">            
+        <button type="submit" class="btn btn-primary">Save <%= I18n.t("agent.#{@agent.agent_type}") %></button>
+        <%= link_to "Cancel", :back, :class => "btn btn-cancel" %>
+      </div>
+    </div>
   </div>
-  <div class="span9 record-pane">
-    <h2><%= "New #{I18n.t("agent.#{@agent.agent_type}")}" %>  <span class="label label-info">Agent</span></h2>
-    <%= form_for @agent, :as => "agent", :url => {:action => :create, :type => @agent.agent_type}, :html => {:class => 'form-horizontal'} do |f| %>
-       <%= render :partial => "agents/form", :locals => {:f => f} %>
-       <div class="form-actions">            
-          <button type="submit" class="btn btn-primary">Save <%= I18n.t("agent.#{@agent.agent_type}") %></button>   
-          <%= link_to "Cancel", :back, :class => "btn btn-cancel" %>
-       </div>
-    <% end %>
-  </div>
-</div>
+<% end %>
