--- a/frontend/app/views/shared/_header.html.erb
+++ b/frontend/app/views/shared/_header.html.erb
@@ -35,6 +35,8 @@
                   <ul class="dropdown-menu">
                     <li><%= link_to "Person", :controller => :agents, :action => :new, :type => :agent_person %></li>
                     <li><%= link_to "Family", :controller => :agents, :action => :new, :type => :agent_family %></li>
+                    <li><%= link_to "Corporate Entity", :controller => :agents, :action => :new, :type => :agent_corporate_entity %></li>
+                    <li><%= link_to "Software", :controller => :agents, :action => :new, :type => :agent_software %></li>
                   </ul>
                 </li>
               </ul>
