--- a/frontend/app/views/agents/edit.html.erb
+++ b/frontend/app/views/agents/edit.html.erb
@@ -9,7 +9,7 @@
     <h2><%= @agent.names[0]["primary_name"] %>  <span class="label label-info">Agent</span></h2>
     <%= render :partial => "agents/form", :locals => {:f => f} %>
     <div class="form-actions">            
-      <button type="submit" class="btn btn-primary">Save <%= I18n.t("agent.#{@agent.agent_type}") %></button>   
+      <button type="submit" class="btn btn-primary">Save <%= I18n.t("agent.agent_type.#{@agent.agent_type}") %></button>   
       <%= link_to "Cancel", :back, :class => "btn btn-cancel" %>
     </div>
   </div>
