--- a/frontend/app/views/archival_objects/_new_inline.html.erb
+++ b/frontend/app/views/archival_objects/_new_inline.html.erb
@@ -1,10 +1,17 @@
 <%= form_for @archival_object, :as => "archival_object", :url => {:action => :create}, :html => {:class => 'form-horizontal'} do |f| %>
-   <%= render :partial => "archival_objects/form_container", :locals => {:f => f} %>
-   <div class="form-actions">
+<div class="row-fluid">
+  <div class="span3">
+    <%= render :partial => "sidebar" %>
+  </div>
+  <div class="span9 record-pane">
+    <%= render :partial => "archival_objects/form_container", :locals => {:f => f} %>
+    <div class="form-actions">
       <div class="btn-group btn-submit-group">
-         <button type="submit" class="btn btn-primary">Create Archival Object</button>
-         <button type="button" id="createPlusOne" class="btn btn-primary">+1</button>
+        <button type="submit" class="btn btn-primary">Save Archival Object</button>
+        <button type="button" id="createPlusOne" class="btn btn-primary">+1</button>
       </div>
       <%= link_to "Cancel", :back, :class => "btn btn-cancel" %>
-   </div>
+    </div>
+  </div>
+</div>
 <% end %>
