--- a/frontend/app/views/archival_objects/_edit_inline.html.erb
+++ b/frontend/app/views/archival_objects/_edit_inline.html.erb
@@ -1,7 +1,14 @@
 <%= form_for @archival_object, :as => "archival_object", :url => {:action => :update, :id => @archival_object.id}, :html => {:class => 'form-horizontal'} do |f| %>
-   <%= render :partial => "archival_objects/form_container", :locals => {:f => f} %>
-   <div class="form-actions">            
+<div class="row-fluid">
+  <div class="span3">
+    <%= render :partial => "sidebar" %>
+  </div>
+  <div class="span9 record-pane">
+    <%= render :partial => "archival_objects/form_container", :locals => {:f => f} %>
+    <div class="form-actions">            
       <button type="submit" class="btn btn-primary">Save Archival Object</button>
       <%= link_to "Cancel", :back, :class => "btn btn-cancel" %>
-   </div>
+    </div>
+  </div>
+</div>
 <% end %>
