--- a/frontend/app/views/archival_objects/_form_container.html.erb
+++ b/frontend/app/views/archival_objects/_form_container.html.erb
@@ -1,31 +1,15 @@
 <h2><%= @archival_object.title %>  <span class="label label-info">Archival Object</span></h2>
 <br/>
 <%= render "shared/form_messages", :object => @archival_object %>
-<div class="tabbable">
-  <ul class="nav nav-tabs">
-    <li class="active"><a href="#basic-information" data-toggle="tab">Basic Information</a></li>
-    <!-- <li><a href="#finding-aid" data-toggle="tab">Finding Aid</a></li>
-    <li><a href="#dates" data-toggle="tab">Dates</a></li>
-    <li><a href="#names" data-toggle="tab">Names</a></li>-->
-  </ul>
-  <div class="tab-content">
-    <div class="tab-pane active" id="basic-information">
-      <%= render :partial => "archival_objects/forms/basic_information", :locals => {:f => f} %>
-    </div>
-    <!-- <div class="tab-pane" id="finding-aid">
-      <div class="well">Finding Aid form here...</div>
-    </div>
-    <div class="tab-pane" id="dates">
-      <div class="well">Dates form/list here...</div>
-    </div>
-    <div class="tab-pane" id="names">
-      <div class="well">Names selector/list here...</div>
-    </div> -->
-    <div class="tab-pane" id="subjects">
-       <%= render :partial => "archival_objects/forms/subjects", :locals => {:f => f} %>
-    </div>
-  </div>
-</div>
+
+<fieldset>
+  <section id="basic_information">
+    <h3>Basic Information</h3>
+    <%= render :partial => "archival_objects/forms/basic_information", :locals => {:f => f} %>
+  </section>
+</fieldset>
+
+
 <%= f.hidden_field :parent %>
 <%= f.hidden_field :resource %>
 <%= hidden_field_tag "ao_id", @archival_object.id %>
