--- a/frontend/app/views/resources/show.html.erb
+++ b/frontend/app/views/resources/show.html.erb
@@ -1,9 +1,8 @@
 <%= render :partial => "shared/breadcrumb", :locals => {:trail => [link_to("Browse Resources", :controller => :resources, :action => :index), @resource.title]} %>
 <div class="row-fluid">
-   <div class="span3">
-     <div class="archives-tree-container">
+  <div class="span12">
       <%= render :partial => "resources/tree", :locals => {:selected => "resource"} %>
-    </div> <!-- well -->
-   </div> <!-- span3 -->
-   <div class="span9 record-pane" id="object_container"></div>
+  </div>
 </div>
+
+<div id="object_container"></div>
