--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -46,7 +46,7 @@
   float: right;
 }
 
-fieldset h3 {
+.record-pane h3 {
   background-color: #FAFAFA;
   border-bottom: 1px solid #DDD;
   padding-left: 10px;
