--- a/frontend/app/views/resources/_form_container.html.erb
+++ b/frontend/app/views/resources/_form_container.html.erb
@@ -9,4 +9,21 @@
     <h3>Basic Information</h3>
     <%= render :partial => "resources/forms/basic_information", :locals => {:f => f} %>
   </section>
+
+  <section id="extent">
+    <h3>
+      Extent
+      <input type="button" class="btn btn-small pull-right" value="Add Extent"/>
+    </h3>
+    <div id="extents_container">
+      <% puts @resource.extents.inspect %>
+      <% @resource.extents.each_with_index do | extent, index | %>
+        <% f.with_jsonmodel("extents[]", extent, :extent) do %>
+          <%= render :partial => "extent/form", :locals => {:f => f, :index => index} %>
+        <% end %>
+      <% end %>
+    </div>
+  </section>
 </fieldset>
+
+<%= render :partial => "extent/template", :locals => {:f => f} %>
