--- a/frontend/app/views/agents/_form.html.erb
+++ b/frontend/app/views/agents/_form.html.erb
@@ -67,13 +67,13 @@
 </fieldset>
 
 <div id="agent_contact_form_template"><!--
-  <% f.with_jsonmodel("agent_contacts[]", {}, :agent_contact) do %>
+  <% f.with_jsonmodel("agent_contacts[]", {}, :agent_contact, :index => "${index}") do %>
     <%= render :partial => "agents/contact_details", :locals => {:f => f} %>
   <% end %>
 --></div>
 
 <div id="agent_secondary_name_form_template"><!--
-  <% f.with_jsonmodel("names[]", {}, @name_type) do %>
+  <% f.with_jsonmodel("names[]", {}, @name_type, :index => "${index}") do %>
     <%= render :partial => "agents/name_forms/secondary_name_form", :locals => {:f => f} %>
   <% end %>
 --></div>
