--- a/frontend/app/views/shared/_form_messages.html.erb
+++ b/frontend/app/views/shared/_form_messages.html.erb
@@ -14,11 +14,11 @@
    <% if object._exceptions.has_key?(:warnings) %>
       <div class="alert alert-warning">
          <% object._exceptions[:warnings].each do |attr, messages| %>
-              <div class="errors-for_attr">
-                <% messages.each do |msg| %>
-                  <div class="warning"><%= I18n.t(:"#{type}.#{attr}") %> - <%= msg %></div>
-                <% end %>
-              </div>
+            <div class="errors-<%= attr %>">
+              <% messages.each do |msg| %>
+                <div class="warning"><%= I18n.t(:"#{type}.#{attr}") %> - <%= msg %></div>
+              <% end %>
+            </div>
          <% end %>
          <% if not object._exceptions.has_key?(:errors) %>
             <br/>
